tree-view と workspace の font

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -18,6 +18,15 @@
 // style the background color of the tree view
 .tree-view {
   // background-color: whitesmoke;
+  font-family: 'Monaco';
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+}
+atom-workspace {
+  font-family: 'Open Sans';
+  font-size: 13px;
+  letter-spacing: 0.5px;
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
