--- a/atom/styles.less
+++ b/atom/styles.less
@@ -18,13 +18,13 @@
 // style the background color of the tree view
 .tree-view {
   // background-color: whitesmoke;
-  font-family: 'Monaco';
+  font-family: 'OpenSans-Regular';
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 0.5px;
 }
 atom-workspace {
-  font-family: 'Open Sans';
+  font-family: 'OpenSans-Regular';
   font-size: 13px;
   letter-spacing: 0.5px;
 }
