update style.less for termination

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -40,7 +40,7 @@ atom-text-editor::shadow .cursor {
   // border-color: red;
 }
 
-.terminal-plus .xterm {
+.termination .xterm {
   background-color: #1c252a;
   color: #F5F5F5;
 
